# mdm-server

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  diesel.toml
migrations/2023-02-06-041637_add_devices/: up.sql
migrations/2023-02-07-184502_add_enrollment/: down.sql  up.sql
optional_value/: Cargo.toml  README.md
optional_value/src/: lib.rs
src/: app_state.rs  certificates.rs  config.rs  database.rs  main.rs  payloads.rs  plist.rs  profile_payload.rs  routes.rs  storage.rs
src/certificates/: apple_certs.rs  apple_device_ca.rs  cert_verify.rs  certificates.rs  certs.rs  der_transform.rs  file.rs  generator.rs  mod.rs  pkcs7.rs  pkcs7_body.rs
src/database/: connections.rs  mod.rs  models.rs  schema.patch  schema.rs
src/payloads/: base_payload.rs  certificates.rs  mod.rs  payload_types.rs  ser.rs
src/routes/: enroll.rs  metadata.rs
src/routes/scep/: mod.rs  scep_get.rs  scep_post.rs
