[package]
name = "mdm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["http2"] }
axum-server = { version = "0.4", features = ["tls-rustls"]}
diesel = { version = "2.0", features = ["r2d2", "sqlite", "time", "uuid"] }
openssl = "0.10"
optional_value = { path = "./optional_value" }
plist = "1"
rand = "0.8"
rcgen = { version = "0.10", features = ["x509-parser"] }
rsa = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = "0.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.7"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
