[package]
name = "mdm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"]}
cms = "0.2"
der = { version = "0.7", features = ["pem"] }
diesel = { version = "2.0", features = ["r2d2", "sqlite", "time", "uuid"] }
openssl = "0.10"
optional_value = { path = "./optional_value" }
plist = "1"
rand = "0.8"
rcgen = { version = "0.13", features = ["aws_lc_rs", "x509-parser"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = "0.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[profile.release]
lto = true
strip = true
