[package]
name = "mdm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"]}
cms = { version = "0.2", features = ["builder"] }
const-oid = "0.9"
der = { version = "0.7", features = ["pem"] }
diesel = { version = "2.0", features = ["r2d2", "sqlite", "time", "uuid"] }
hex = "0.4"
optional_value = { path = "./optional_value" }
plist = "1"
rand = "0.9"
rcgen = { version = "0.13", features = ["aws_lc_rs", "x509-parser"] }
rsa = { version = "0.9", features = ["sha1", "sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha1 = "0.10"
sha2 = "0.10"
time = "0.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
x509-cert = { version = "0.2", features = ["builder"] }

[profile.release]
lto = true
strip = true
